Styled basic exhibit theme and fixed a ccouple of exhibit layout issues

--- a/shared/exhibit_layouts/gallery-full-left/layout.css
+++ b/shared/exhibit_layouts/gallery-full-left/layout.css
@@ -2,3 +2,4 @@
 .gallery-full-left .secondary {float:right; width:48%;}
 .gallery-full-left .gallery .exhibit-item {float:left; margin-right:18px; margin-bottom:18px;}
 .exhibit-text {margin-top: 1em;}
+#item-full-text {clear: both; padding-top: 2em;}
