--- a/shared/exhibit_themes/basic/screen.css
+++ b/shared/exhibit_themes/basic/screen.css
@@ -1,6 +1,6 @@
 @import url('reset.css');
 
-body {font: 62.5% Verdana, Arial, sans-serif; color:#555; background:#b9a28b;}
+body {font: 62.5% Verdana, Arial, sans-serif; color:#555; background:#b9a28b; }
 
 h1, h2, h3, h4, h5 {color:#663300;}
 h1 {font-size:1.8em; margin-bottom:1em; line-height:1em;}
@@ -16,23 +16,23 @@ a:hover {color: #ff6600;}
 
 /* == Structure == */
 
-#wrap {width:850px; margin:1em auto;background:#fff; overflow:hidden;}
-#header {background:#fff; color:#333; padding:0; margin: 0;overflow: hidden;}
-	h1 {margin:18px 18px 0; padding-bottom: .5em;}
-	h1 a {text-decoration: none;}
-	h2 {color: #666; padding: 18px 18px 9px 0;margin: 0;}
-	h3 {clear: both;}
-	h5 {padding:1em;}
-		h5 a, h5 a:visited {color: #B9A28B;}
+#wrap {width:850px; margin:0 auto 1em; overflow:hidden;}
+#header {clear: both;padding:0; margin: 0;overflow: hidden;}
+	h1 {font-size: 2.4em;margin:18px 0 0; padding-bottom: .5em;}
+	h1 a, h1 a:visited {text-decoration: none;color:#663300;}
+	h2 {font-size: 2em;color: #663300; padding: 18px 18px 9px 0;margin: 0;}
+	h3 {clear: both;font-size: 1.8em;}
+	h5 {float: right;padding:1em 1em 1em 0;}
+		h5 a, h5 a:visited {color: #663300;}
 	
 /* =Exhibit Navigation= */	
-.exhibit-section-nav {float: left; list-style:none; margin-left:0; padding-left:0; overflow:hidden; margin-bottom:0;margin-left: 18px;}
-	.exhibit-section-nav li {display:block; float:left; width:10em;margin-right:1px;}
-	.exhibit-section-nav li a {display:block; float:left; width: 10em; text-decoration:none;padding:0.5em 0;text-align: left; color:#333;}
+.exhibit-section-nav {float: left; list-style:none; margin:0 0 0 4px; padding-left:0; overflow:hidden; }
+	.exhibit-section-nav li {display:block; float:left; width:auto;padding:.25em 1em 0; border: 1px solid #663300;background-color: #ac9074;border-bottom: none;margin-right:2px;text-align: center;}
+	.exhibit-section-nav li a {display:block;text-align: center;text-decoration:none;padding:0.5em 0;color:#fff;}
 	.exhibit-section-nav li a:hover {text-decoration: underline; color: #990000;}
 	
 /* =Page Navigation= */
-.exhibit-page-nav {list-style:none; float: left; padding-top: .7em; width: 100%; border-top: 1px solid #666;}
+.exhibit-page-nav {list-style:none; float: left; padding-top: .7em; width: 100%; border-top: 1px solid #663300;}
 	.exhibit-page-nav li {display:inline;float: left; margin-right:10px;}
 	.exhibit-page-nav li a {display:block; width: 5em; text-decoration:none;padding:0.5em 0;text-align: left;}
 	.exhibit-page-nav li.current a {display:block; width: 5em;font-weight:bold; text-decoration:none;padding:0.5em 0;text-align: left;}
@@ -40,17 +40,17 @@ a:hover {color: #ff6600;}
 
 /* == Content == */
 
-#content {overflow: hidden;background-color:#fff;border: 8px solid #663300;padding:0 18px 18px 18px;color:#333;min-height:400px;}
+#content {overflow: hidden;background-color:#fff;border: 1px solid #663300;padding:0 18px 18px 18px;min-height:400px;}
 
 p.exhibit-description {padding-top: 1em;}
 #exhibit-sections ul.exhibit-section-nav {float:none;display: block;margin: 0 0 1em 1em;}
 	#exhibit-sections ul.exhibit-section-nav li {float:none;display: block; padding: 0 0 .5em;}
 	#exhibit-sections ul.exhibit-section-nav li a {float:none;display:block; padding: 0 0 .5em;}
 	
-	#exhibit-sections dt {padding: 0 0 1.5em 1%; width: 20%; float: left;font-weight: bold;}
+	#exhibit-sections dt {clear: right;padding: 0 0 1.5em 1%; width: 20%; float: left;font-weight: bold;}
 	#exhibit-sections dd {padding: 0 0 1.5em 1%; width: 78%; float: right;}
 
-#footer {margin-top: 1em; padding: 1em;background-color:#fff;}
+#footer {margin-top: 1em; padding: 1em;}
 	#footer a {color: #333;}
 	#footer a:visited {color: #666;}
 
